--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Avocado Admin</title>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"
+		/>
+		<title>Avocado Console UI</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
