add function:sparkles:: close and open nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,12 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"
 		/>
+
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
+
 		<title>Avocado Console UI</title>
 	</head>
 	<body>
